--- a/index.html
+++ b/index.html
@@ -2,16 +2,46 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>UglifyCSS</title>
-		<script src="js/UglifyCSS.js" type="text/javascript"></script>
+        <title>Uglify and Beautify CSS</title>
+        <script src="js/UglifyCSS.js" type="text/javascript"></script>
+		<script src="js/BeautifyCSS.js" type="text/javascript"></script>
 		<link rel="stylesheet" href="css/style.css" type="text/css">
     </head>
     <body>
-        <h2>UglifyCSS</h2>
+        <script>
+            function formatCode() {
+                mode = parseInt(document.getElementById('mode').value)
+                console.log(mode);
+                switch (mode) {
+                    case 1:
+                        UglifyCSS();
+                    break;
+                    case 2:
+                        BeautifyCSS();
+                    break;
+                    default: return false;
+
+                };
+            }
+        </script>
+
+        <h2>Uglify and Beautify CSS</h2>
+
+        <select id="mode">
+            <option value="1">UglifyCSS</option>
+            <option value="2">BeautifyCSS</option>
+        </select>
+
         <div id="text-container">
             <textarea id="source" placeholder="Source code"></textarea>
             <textarea id="result" placeholder="UglifyCSS result"></textarea>
         </div>
-        <div id="start" onclick="UglifyCSS()">Uglify</div>
+
+        <div id="start" onclick="formatCode()">Format code</div>
+
+        <footer>
+            Uglify and Beautify CSS by
+            <a href="https://rtcoder.github.io/">rtCoder</a>
+        </footer>
     </body>
 </html>
