--- a/index.html
+++ b/index.html
@@ -2,30 +2,30 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Uglify and Beautify CSS</title>
-        <script src="js/UglifyCSS.js" type="text/javascript"></script>
+        <title>CSS Converter</title>
+        <script src="js/MinifyCSS.js" type="text/javascript"></script>
 		<script src="js/BeautifyCSS.js" type="text/javascript"></script>
 		<script src="js/main.js" type="text/javascript"></script>
 		<link rel="stylesheet" href="css/style.css" type="text/css">
     </head>
     <body>
-        <h2>Uglify and Beautify CSS</h2>
+        <h2>CSS Converter</h2>
 
         <select id="mode">
-            <option value="1">UglifyCSS</option>
-            <option value="2">BeautifyCSS</option>
+            <option value="1">Minify</option>
+            <option value="2">Beautify</option>
         </select>
 
         <div id="start" onclick="formatCode()">UglifyCSS</div>
         
         <div id="text-container">
             <textarea id="source" placeholder="Source code"></textarea>
-            <textarea id="result" placeholder="UglifyCSS result"></textarea>
+            <textarea id="result" placeholder="result"></textarea>
         </div>
 
 
         <footer>
-            Uglify and Beautify CSS by
+            CSS Converter by
             <a target="_blank" href="https://rtcoder.github.io/">rtCoder</a>
         </footer>
     </body>
