--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <option value="2">Beautify</option>
         </select>
 
-        <div id="start" onclick="formatCode()">UglifyCSS</div>
+        <div id="start" onclick="formatCode()">MinifyCSS</div>
         
         <div id="text-container">
             <textarea id="source" placeholder="Source code"></textarea>
