--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta charset="utf-8">
         <title>CSS Converter</title>
         <script src="js/MinifyCSS.js" type="text/javascript"></script>
-		<script src="js/BeautifyCSS.js" type="text/javascript"></script>
-		<script src="js/main.js" type="text/javascript"></script>
-		<link rel="stylesheet" href="css/style.css" type="text/css">
+        <script src="js/BeautifyCSS.js" type="text/javascript"></script>
+        <script src="js/main.js" type="text/javascript"></script>
+        <link rel="stylesheet" href="css/style.css" type="text/css">
     </head>
     <body>
         <h2>CSS Converter</h2>
@@ -17,10 +17,9 @@
         </select>
 
         <div id="start" onclick="formatCode()">MinifyCSS</div>
-        
+
         <div id="text-container">
-            <textarea id="source" placeholder="Source code"></textarea>
-            <textarea id="result" placeholder="result"></textarea>
+            <textarea id="source" placeholder="Paste css code here"></textarea>
         </div>
 
 
